<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prototype1.view.sideFragments.EventDetailFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF">


        <RelativeLayout
            android:id="@+id/event_top_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp">

            <ImageView
                android:id="@+id/event_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="1.0"
                android:contentDescription="@string/eventdetailimage"
                tools:src="@drawable/climb" />

            <ImageView
                android:id="@+id/event_button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/back_button"
                app:srcCompat="@drawable/ic_close_white_24px" />


            <TextView
                style="@style/AppTheme.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:text="" />

        </RelativeLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/event_top_card"
            android:layout_toLeftOf="@+id/chat_button"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="-14dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_edit_white_24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/chat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/event_top_card"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="-14dp"
            app:srcCompat="@drawable/ic_chat_white_24" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/event_top_card"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:id="@+id/rsvp_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="RSVP"
                        android:theme="@style/ThemeOverlay.FilterButton"/>

                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/progressBar_cyclic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:minWidth="50dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_users_attending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/white"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


<!--                <TextView-->
<!--                    android:id="@+id/event_number_attend"-->
<!--                    style="@style/AppTheme.Headline"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:layout_marginEnd="16dp"-->
<!--                    android:textColor="@android:color/black"-->
<!--                    android:textSize="20sp"-->
<!--                    android:textStyle="bold"-->
<!--                    tools:text="NUSync Signups: 0" />-->


                <TextView
                    android:id="@+id/event_url_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    tools:text="" />

                <Button
                    android:id="@+id/new_post_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Create New Post"
                    android:visibility="gone" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/posts_tab_layout"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:tabMode="scrollable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/updatesViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:text="Delete Event" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/clubCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/clubTitle"
                            style="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxWidth="100dp"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:text="@string/titleCellPlaceholder"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/clubImage"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY"
                            android:transitionName="imageTrans">

                        </ImageView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</ScrollView>
